# lndr

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  INSTALL.md  README.md  RESUBMISSION.md  docker-compose.yml  docker-entrypoint.sh  migrate.sql  run-dev.sh  stack.yaml
.circleci/: config.yml
fid-backend/: README.md  fid-backend.cabal  stack.yaml
fid-backend/app/: Main.hs
fid-backend/src/: Docs.hs  EthInterface.hs  Server.hs  Web3Interface.hs
fid-cli/: README.md  fid-cli.cabal  stack.yaml
fid-cli/app/: Main.hs
fid-cli/data/: CreditProtocol.abi
fid-cli/src/FiD/Cli/: Main.hs
lndr-backend/: README.md  lndr-backend.cabal
lndr-backend/app/: Main.hs
lndr-backend/data/: CreditProtocol.abi  lndr-server.config  lndr-server.config.j2  lndr-server.config.prod  lndr-server.config.test
lndr-backend/db/: bootstrap.sh  create_tables.sql
lndr-backend/db/migrations/: 2018-07-03T10.00.00Z_add_settlement_currency_to_pending_credits.sql  2018-07-20T10.00.00Z_create_table_paypal_notifications.sql  2018-07-26T10.00.00Z_change_paypal_requests_primary_key.sql  2018-08-27T10.01.00Z_create_table_identity_verification.sql  2018-10-08T10.00.00Z_change_push_data_pk.sql
lndr-backend/src/: Docs.hs  EthInterface.hs  Handler.hs  Server.hs  Types.hs
lndr-backend/src/Handler/: Credit.hs  Friend.hs  Types.hs
lndr-backend/src/Lndr/: Config.hs  Db.hs  Docs.hs  EthInterface.hs  EthereumInterface.hs  Handler.hs  IdentityVerification.hs  NetworkStatistics.hs  Notifications.hs  Server.hs  Signature.hs  Types.hs  Util.hs  Web3.hs
lndr-backend/src/Lndr/Db/: Friendships.hs  Identity.hs  Nicknames.hs  PendingCredits.hs  PushData.hs  Types.hs  VerifiedCredits.hs
lndr-backend/src/Lndr/Handler/: Admin.hs  Credit.hs  Friend.hs  Identity.hs  Types.hs
lndr-cli/: README.md  lndr-cli.cabal
lndr-cli/app/: Main.hs
lndr-cli/src/Lndr/CLI/: Actions.hs  Args.hs  CmdLine.hs  Config.hs
lndr-cli/test/: Spec.hs
test/: config.template
ucac/: .gitignore  gethtest.sh  package-lock.json  package.json  runtest.sh  truffle.js
ucac/contracts/: FriendInDebt.sol  Lndr.sol  LndrAUD.sol  LndrCAD.sol  LndrCHF.sol  LndrCNY.sol  LndrDKK.sol  LndrEUR.sol  LndrGBP.sol  LndrHKD.sol  LndrIDR.sol  LndrILS.sol  LndrINR.sol  LndrJPY.sol  LndrKRW.sol  LndrMYR.sol  LndrNOK.sol  LndrNZD.sol  LndrPLN.sol  LndrRUB.sol  LndrSEK.sol  LndrSGD.sol  LndrTHB.sol  LndrTRY.sol  LndrVND.sol
ucac/migrations/: 2_deploy_contracts.js
ucac/scripts/: run_local_perf_tests.sh  run_local_tests.sh
ucac/test/: Lndr.js
