name:                fid-backend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fid-backend#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EthInterface
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base16-bytestring
                     , bytestring
                     , either
                     , listsafe
                     , memory
                     , text
                     , web3
  default-language:    Haskell2010

executable fid-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fid-backend
                     , aeson
                     , either
                     , lens
                     , list-t
                     , mtl
                     , servant-server
                     , stm
                     , stm-containers
                     , text
                     , transformers
                     , wai
                     , warp
                     , web3
  default-language:    Haskell2010

test-suite fid-backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fid-backend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fid-backend
