name:                fid-cli
version:             0.1.0.0
synopsis:            friend-in-debt terminal interface
description:         friend-in-debt terminal interface that interfaces with
                     FiD UCAC via an ethereum client
homepage:            https://github.com/githubuser/fid-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Roy Blankman
maintainer:          riblankman@gmail.com
copyright:           2017 Blockmason
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FiD.Cli.Main
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base16-bytestring
                     , bytestring
                     , cmdargs
                     , either
                     , http-conduit
                     , listsafe
                     , memory
                     , text
                     , web3
  default-language:    Haskell2010

executable fiddy
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fid-cli
  default-language:    Haskell2010

test-suite fid-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fid-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fid-cli
