name:                lndr-backend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Docs
                     , EthInterface
                     , Handler
                     , Handler.Credit
                     , Handler.Friend
                     , Handler.Types
                     , Server
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base16-bytestring
                     , bytestring
                     , either
                     , ethereumhs-util
                     , hashable
                     , http-types
                     , listsafe
                     , list-t
                     , memory
                     , mtl
                     , servant
                     , servant-docs
                     , servant-server
                     , stm
                     , stm-containers
                     , text
                     , time
                     , transformers
                     , wai
                     , web3
  default-language:    Haskell2010

executable lndr-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lndr-backend
                     , wai
                     , wai-logger
                     , warp
  default-language:    Haskell2010
