name:                lndr-backend
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules: Lndr.EthereumInterface
                 , Lndr.NetworkStatistics
                 , Lndr.Server
                 , Lndr.Types
                 , Lndr.Util
                 , Lndr.Signature
  other-modules: Lndr.Db
               , Lndr.Db.Friendships
               , Lndr.Db.Nicknames
               , Lndr.Db.PendingCredits
               , Lndr.Db.PushData
               , Lndr.Db.Types
               , Lndr.Db.VerifiedCredits
               , Lndr.Docs
               , Lndr.Handler
               , Lndr.Handler.Admin
               , Lndr.Handler.Credit
               , Lndr.Handler.Friend
               , Lndr.Handler.Types
               , Lndr.Notifications
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aws
                     , base16-bytestring
                     , base64-bytestring
                     , bytestring
                     , configurator
                     , cryptonite
                     , data-default
                     , directory
                     , either
                     , emailaddress
                     , ethereumhs-util
                     , filepath
                     , hashable
                     , http-client
                     , http-conduit
                     , http-types
                     , lens
                     , listsafe
                     , list-t
                     , memory
                     , mtl
                     , postgresql-simple
                     , resource-pool
                     , scientific
                     , servant
                     , servant-docs
                     , servant-server
                     , stm
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , wai
                     , web3
  default-language:    Haskell2010

executable lndr-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lndr-backend
                     , wai
                     , wai-logger
                     , warp
                     , warp-tls
  default-language:    Haskell2010
