name:                lndr-cli
version:             0.1.0.0
synopsis:            lndr terminal interface
description:         lndr terminal interface that interfaces with
                     lndr UCAC via an ethereum client
license:             BSD3
license-file:        LICENSE
author:              Roy Blankman
maintainer:          riblankman@gmail.com
copyright:           2017 Blockmason
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable lndr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , base16-bytestring
                     , bytestring
                     , cmdargs
                     , either
                     , lndr-backend
                     , http-conduit
                     , listsafe
                     , memory
                     , pretty-simple
                     , text

  default-language:    Haskell2010
