name:                lndr-cli
version:             0.1.0.0
synopsis:            lndr terminal interface
description:         lndr terminal interface that interfaces with
                     lndr UCAC via an ethereum client
license:             BSD3
license-file:        LICENSE
author:              Roy Blankman
maintainer:          riblankman@gmail.com
copyright:           2017 Blockmason
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lndr.CLI.Config
  build-depends:       base >= 4.7 && < 5
                     , data-default
                     , dhall
                     , web3
  default-language:    Haskell2010

executable lndr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lndr-cli
                     , aeson
                     , base16-bytestring
                     , bytestring
                     , cmdargs
                     , data-default
                     , dhall
                     , directory
                     , either
                     , lndr-backend
                     , http-conduit
                     , listsafe
                     , memory
                     , pretty-simple
                     , text
                     , web3
  default-language:    Haskell2010
