name:                lndr-cli
version:             0.1.0.0
synopsis:            lndr terminal interface
description:         lndr terminal interface that interfaces with
                     lndr UCAC via an ethereum client
license:             BSD3
license-file:        LICENSE
author:              Roy Blankman
maintainer:          riblankman@gmail.com
copyright:           2017 Blockmason
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lndr.CLI.Actions
                     , Lndr.CLI.CmdLine
                     , Lndr.CLI.Config
  build-depends:       base >= 4.7 && < 5
                     , base64-bytestring
                     , bytestring
                     , cmdargs
                     , data-default
                     , dhall
                     , directory
                     , emailaddress
                     , ethereumhs-util
                     , http-conduit
                     , lndr-backend
                     , pretty-simple
                     , text
                     , web3
  default-language:    Haskell2010

executable lndr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lndr-cli
                     , aeson
                     , base16-bytestring
                     , bytestring
                     , cmdargs
                     , data-default
                     , dhall
                     , directory
                     , either
                     , emailaddress
                     , listsafe
                     , memory
                     , text
                     , web3
  default-language:    Haskell2010


test-suite server-cli-integration
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lndr-cli
                     , lndr-backend
                     , containers
                     , directory
                     , either
                     , emailaddress
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , text
                     , transformers
                     , web3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
